--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://wtsks.com
 Author: WTS
 Author URI: https://wtsks.com
 Description: A plain-vanilla & lightweight theme for Elementor page builder
-Version: 2.8.3
+Version: 3.0.0
 Requires at least: 6.0
 Tested up to: 6.5
 Requires PHP: 8.0
@@ -12,7 +12,7 @@ JQuery: 3.6.3
 License: GNU General Public License v3 or later.
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
 Tags: Custom layout
-Text Domain: wts-elementor-default
+Text Domain: wts-default
 */
 
 
