--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /*
-Theme Name: WTS Elementor, Default
+Theme Name: WTS, Default
 Theme URI: https://wtsks.com
 Author: WTS
 Author URI: https://wtsks.com
-Description: A plain-vanilla & lightweight theme for Elementor page builder
-Version: 3.0.2
+Description: A plain-vanilla & lightweight theme for building out pages
+Version: 3.0.3
 Requires at least: 6.0
 Tested up to: 6.5
 Requires PHP: 8.0
