--- a/styles/editor-overrides.css
+++ b/styles/editor-overrides.css
@@ -1,6 +1,6 @@
 /*	Overrides for Elementor Editor: > 3.12.0 
 --------------------------------------------------------------- */
-/* :root {
+:root {
    color-scheme: dark;
    --e-a-color-white: #fff;
    --e-a-color-black: #000;
@@ -85,13 +85,15 @@
    --e-p-border-global: #5eead4;
    --e-p-border-global-hover: #1dddbf;
    --e-p-border-global-invert:#0c0d0e;
-} */
-
-#elementor-panel.elementor-panel.ui-resizable {
-   width: 500px !important;
 }
-#elementor-navigator {
-   width: 380px !important;
+
+/*	Style and Layout Overrides for Elementor Items
+--------------------------------------------------------------- */
+
+body {
+   --e-editor-panel-width: 500px !important;
+   --e-editor-navigator-width: 380px !important;
+   --e-editor-navigator-promotion-height: 0px !important;
 }
 
 #elementor-panel-page-editor .e-ai-button,
