--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://wtsks.com
 Author: WTS
 Author URI: https://wtsks.com
 Description: A plain-vanilla & lightweight theme for building out pages
-Version: 3.0.5
+Version: 3.0.6
 Requires at least: 6.0
 Tested up to: 6.5
 Requires PHP: 8.0
@@ -75,6 +75,19 @@ body .full-height {
 }
 .passthrough .clickthrough {
    pointer-events: auto; /* Re-enable pointer events */
+}
+
+.videoContainer {
+   height: 100%;
+}
+.videoContainer .elementor-video {
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   height: 100%;
+   width: auto;
+   transform: translate(-50%, -50%);
+   object-fit: cover;
 }
 
 /* ------------------------------------------------------------
