--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://wtsks.com
 Author: WTS
 Author URI: https://wtsks.com
 Description: A plain-vanilla & lightweight theme for building out pages
-Version: 3.0.6
+Version: 3.0.7
 Requires at least: 6.0
 Tested up to: 6.5
 Requires PHP: 8.0
@@ -114,6 +114,10 @@ body .full-height {
 .page-content .elementor-element h6 {
 	margin-top: 0px;
 	margin-bottom: 0px;
+}
+
+.dynamic-content-for-elementor-acf {
+   margin-block-start: 0;
 }
 
 .elementor-widget-text-editor .elementor-widget-container p {
