--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://wtsks.com
 Author: WTS
 Author URI: https://wtsks.com
 Description: A plain-vanilla & lightweight theme for building out pages
-Version: 3.0.7
+Version: 3.0.8
 Requires at least: 6.0
 Tested up to: 6.5
 Requires PHP: 8.0
@@ -77,7 +77,8 @@ body .full-height {
    pointer-events: auto; /* Re-enable pointer events */
 }
 
-.videoContainer {
+.videoContainer,
+.videoContainer .e-hosted-video {
    height: 100%;
 }
 .videoContainer .elementor-video {
@@ -352,6 +353,20 @@ body:not(.elementor-editor-active) .e-con {
    height: 26px;
    width: auto;
    max-width: none;
+}
+
+/*  HEADER SCROLL MOVEMENTS
+________________________________________________________________________*/
+
+.headerDiv-move {
+   position: relative;
+   top: 0px;
+   transition: 0.75s;
+}
+.headerDiv-move-up {
+  position: relative;
+  top: -350px;
+   transition: 0.75s;
 }
 
 /* ------------------------------------------------------------ */
