--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://wtsks.com
 Author: WTS
 Author URI: https://wtsks.com
 Description: A plain-vanilla & lightweight theme for building out pages
-Version: 4.0.0
+Version: 4.0.2
 Requires at least: 6.0
 Tested up to: 6.5
 Requires PHP: 8.0
@@ -133,7 +133,7 @@ body .full-height {
 .page-content .elementor-element h5,
 .page-content .elementor-element h6 {
 	margin-top: 0px;
-	margin-bottom: 0px;
+	margin-bottom: 0.25em;
 }
 
 .dynamic-content-for-elementor-acf {
